# legal-intel-engine

./: .gitignore  README.md  main.py  pyproject.toml  setup-project.py  test_orchestrator.py  test_parser.py  test_pipeline.py
app/models/: contract.py
app/services/: brain.py  orchestrator.py  parser.py  protector.py  vector_store.py
