[project]
name = "legal-intel-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.93.0",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "groq>=1.2.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "spacy>=3.8.14",
    "uvicorn>=0.46.0",
]
